--- a/blog/when-was-the-first-bike-invented/index.mdx
+++ b/blog/when-was-the-first-bike-invented/index.mdx
@@ -5,4 +5,4 @@ hero_image: "./tim.jpg"
 hero_image_alt: "Fat bike without rider next on the coast"
 ---
 
-In the year of 1817, the early bicycle rolled without any pedals and featured a wooden frame.
+Who knows when it was invented.
